# sxs

./: .gitattributes  .gitignore  .gitmodules  BLUEPRINT_CONCEPT.md  CMakeLists.txt  KERNEL.md  LICENSE  README.md  THEORY.md  TYPES.md  VISION.md  VISION_TODO.md  build_and_test.sh  commands.md  example.sxs  format.sh  kernel_io_test.sxs  kernel_test_import_file.sxs  kernel_test_import_file_no_kernel.sxs  landscape.md  map_test.sxs  min.sxs  next.md  project.md  projects.md  run_clang.sh  run_perf.sh  run_runtime_tests.sh  run_tcc.sh  sanity.sh  tags  tbd.md  test_full_import.sxs  test_import_lib.sxs  test_import_simple.sxs  test_proc_do_simple.slp  wizard.sh
apps/: CMakeLists.txt
apps/cmd/: CMakeLists.txt
apps/cmd/sup/: CMakeLists.txt  data.hpp  main.cpp  manager.hpp  project.cpp  runtime.cpp
apps/cmd/sxs-rt/: main.cpp
apps/kernels/internal_test_kernel/: Makefile
apps/pkg/: CMakeLists.txt
apps/pkg/core/: compiler_context.cpp  compiler_context.hpp  context.cpp  context.hpp  core.cpp  interpreter.cpp  interpreter.hpp
apps/scripts/: kv.sxs  test_kv_comprehensive.sxs
apps/tests/: CMakeLists.txt
apps/tests/scripts/: alu_kv.sxs
apps/tests/unit/: CMakeLists.txt
core/: CMakeLists.txt  context.cpp  context.hpp  core.cpp  core.hpp  core.md  interpreter.cpp  interpreter.hpp
core/imports/: imports.md
core/instructions/: datum.cpp  instructions.cpp  instructions.hpp
core/instructions/generation/: generation.cpp
core/instructions/interpretation/: interpretation.cpp  interpretation.hpp
core/instructions/typechecking/: typechecking.cpp  typechecking.hpp
core/kernels/: kernels.cpp  kernels.hpp
examples/http/: CMakeLists.txt  main.cpp
integrants/: CMakeLists.txt
integrants/bytes/: bytes.hpp
integrants/cache/: cache.hpp
integrants/kvds/: about.md  datastore.cpp
kernels/: CMakeLists.txt  test.sh  test.sxs
kernels/alu/: Makefile  alu.cpp  alu.hpp
kernels/fs/: about.md  fs.cpp  fs.hpp  kernel.sxs
kernels/int/: README.md
kernels/internal_test_kernel/: Makefile  kernel.sxs  test.cpp
kernels/io/: Makefile  io.cpp  io.hpp  kernel.sxs
kernels/kv/: Makefile  kernel.sxs  kv.cpp
kernels/random/: Makefile  random.cpp  random.hpp
libs/: CMakeLists.txt  about.md
libs/buffer/: CMakeLists.txt  buffer.c  buffer.h
libs/buffer/tests/: CMakeLists.txt  buffer_manipulation_tests.c  buffer_tests.c  split_buffer_tests.c  sub_buffer_tests.c
libs/core/: core.h
libs/core/fns/: fns.h
libs/ctx/: CMakeLists.txt  ctx.c  ctx.h
libs/ctx/tests/: CMakeLists.txt  ctx_tests.c
libs/map/: CMakeLists.txt
libs/map/tests/: CMakeLists.txt  map_tests.c
libs/pkg/: CMakeLists.txt  kernel_api.h  kernel_api.hpp
libs/pkg/events/: about.md  events.cpp  events.hpp
libs/pkg/kvds/: distributor.cpp  memstore.cpp  memstore.hpp
libs/pkg/slp/: about.md  slp.cpp  slp.hpp
libs/pkg/types/: lifetime.hpp
libs/scanner/: scanner.c  scanner.h
libs/scanner/docs/: group-scanner.md
libs/scanner/tests/: CMakeLists.txt  scanner_find_group_tests.c  scanner_stress_tests.c  scanner_tests.c
libs/slp/: CMakeLists.txt  slp.c  slp.h
libs/slp/tests/: slp_test.c  test_comments.c  test_edge_cases.c  test_lists.c  test_object_management.c  test_virtual_lists.c
libs/std/: CMakeLists.txt
libs/std/alu/: alu.cpp  alu.hpp  kernel.sxs
libs/std/event/: Makefile  aboutl.md  event.cpp  kernel.sxs
libs/std/forge/: Makefile  forge.cpp  forge.hpp  forge.md  forge_test.cpp  kernel.sxs
libs/std/io/: Makefile  io.cpp  kernel.sxs
libs/std/kv/: Makefile  kernel.sxs  kv.cpp
libs/std/random/: kernel.sxs  random.cpp  random.hpp
libs/std/sxs/: about.md
libs/sxs/: CMakeLists.txt  about.md  builtins.c  errors.c  errors.h  eval.c  forms.c  forms.h  slpcb.c  sxs.c  sxs.h  typecheck.c  typecheck.h  typecheck.md  typecheck_callbacks.c
libs/sxs/impls/: catch.c  commands.ideas.md  debug.c  do.c  do_typecheck.c  dot_map.c  dot_map_typecheck.c  impls.h  insist.c  insist_typecheck.c  load_store.c  load_store_typecheck.c  proc.c  proc_typecheck.c  rotate.c
libs/sxs/tests/: CMakeLists.txt  sxs_builtins_test.c  sxs_forms_test.c  sxs_typecheck_test.c
libs/testlib/: test.h
libs/tests/: CMakeLists.txt
libs/tests/kernel/: run.sh
libs/tests/unit/: CMakeLists.txt
libs/types/: types.h
old/sxs/: CMakeLists.txt  data.hpp  main.cpp  manager.hpp  project.cpp
pkg/: CMakeLists.txt
pkg/bytes/: bytes.hpp
pkg/core/: core.cpp  core.hpp  interpreter.cpp  interpreter.hpp
pkg/core/datum/: datum.cpp  datum.hpp
pkg/core/imports/: imports.cpp  imports.hpp
pkg/core/instructions/: instructions.cpp  instructions.hpp
pkg/core/kernels/: kernel_api.h  kernels.cpp  kernels.hpp  kernels.md
pkg/env/: env.hpp
pkg/kvds/: about.md  datastore.cpp  datastore.hpp  distributor.cpp  kvds.cpp  kvds.hpp  memstore.cpp  memstore.hpp
pkg/parser/: idea.md  parser.cpp  parser.hpp
pkg/quanta/: quanta.cpp  quanta.hpp  schema.hpp
pkg/random/: entry.hpp  generator.hpp  random.cpp
pkg/record/: about.md  record.cpp  record.hpp
pkg/runtime/: THEORY.md  about.md  encoder.cpp  encoder.hpp  executor.cpp  module.hpp  processor.cpp  processor.hpp  runtime.cpp  runtime.hpp
pkg/runtime/entity/: entity.cpp  entity.hpp
pkg/runtime/events/: events.cpp  events.hpp
pkg/runtime/fns/: COMMANDS.md  COMMAND_DEFS.md  event.cpp  event.hpp  expr.cpp  expr.hpp  fns.cpp  fns.hpp  helpers.hpp  kv.cpp  kv.hpp  runtime_fns.cpp  runtime_fns.hpp  util.cpp  util.hpp
pkg/runtime/session/: about.md  session.cpp  session.hpp
pkg/runtime/system/: const.hpp  system.cpp  system.hpp
pkg/runtime/ts/: about.md
pkg/sconf/: about.md  sconf.cpp  sconf.hpp
pkg/slp/: about.md  buffer.cpp  buffer.hpp  example.slp  slp.cpp  slp.hpp
pkg/ts/: about.md  ts.cpp  ts.hpp  ts.md
pkg/types/: lifetime.hpp  monotonic_counter.hpp  shared_obj.hpp  view.hpp
root/: CMakeLists.txt  kernel_api.hpp
root/slp/: slp.hpp
sup/: CMakeLists.txt
sxs/: CMakeLists.txt  data.hpp  project.cpp  runtime.cpp
tests/unit/core/: CMakeLists.txt  apply_test.cpp  assert_test.cpp  basic_scoping_test.cpp  cast_test.cpp  edge_cases_test.cpp  functions_test.cpp  (+25 more)
(+423 files in other folders)
